--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.4",
-        "srmklive/paypal": "^3.0",
-        "stripe/stripe-php": "^10.7"
+        "laravel/ui": "^3.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
